--- a/epever_mppt_controller/realtime.yaml
+++ b/epever_mppt_controller/realtime.yaml
@@ -48,6 +48,8 @@ sensor:
     filters:
       - multiply: 0.01
     icon: mdi:flash
+    device_class: power
+    state_class: measurement
 
   - platform: modbus_controller
     modbus_controller_id: epever
@@ -126,6 +128,8 @@ sensor:
     filters:
       - multiply: 0.01
     icon: mdi:flash
+    device_class: power
+    state_class: measurement
 
   - platform: modbus_controller
     modbus_controller_id: epever
