--- a/epever_mppt_controller.yaml
+++ b/epever_mppt_controller.yaml
@@ -1,7 +1,7 @@
 substitutions:
   name: tracer
   prefix: "MPPT"
-  update_interval: 10s
+  update_interval: 30s
   disabled_by_default: "true"
   DI: GPIO19    # TX Pin
   RO: GPIO18    # RX Pin
@@ -49,12 +49,13 @@ web_server:
   port: 80
 
 time:
-  - platform: homeassistant
-    id: hass_time
-    update_interval: 24h
-    on_time_sync:
-        then:
-          - script.execute: update_rtc
+  # - platform: homeassistant
+  #   id: hass_time
+  #   update_interval: 24h
+  #   on_time_sync:
+  #       then:
+  #         - script.execute: update_rtc
+  
   - platform: sntp
     id: sntp_time
     update_interval: 24h
@@ -81,7 +82,7 @@ uart:
 modbus:
   id: modbus1
   flow_control_pin: ${REDE} # RE/DE
-  send_wait_time: 200ms
+  send_wait_time: 500ms
   # disable_crc: true
 
 modbus_controller:
