--- a/epever_mppt_controller/stats-discharging.yaml
+++ b/epever_mppt_controller/stats-discharging.yaml
@@ -7,6 +7,7 @@ binary_sensor:
     address: 0x3202
     bitmask: 0x800
     icon: mdi:battery-alert-variant-outline
+    device_class: problem
 
   - platform: modbus_controller
     modbus_controller_id: epever
@@ -15,6 +16,7 @@ binary_sensor:
     address: 0x3202
     bitmask: 0x400
     icon: mdi:battery-alert-variant-outline
+    device_class: problem
 
   - platform: modbus_controller
     modbus_controller_id: epever
@@ -23,6 +25,7 @@ binary_sensor:
     address: 0x3202
     bitmask: 0x200
     icon: mdi:battery-alert-variant-outline
+    device_class: problem
 
   - platform: modbus_controller
     modbus_controller_id: epever
@@ -31,6 +34,7 @@ binary_sensor:
     address: 0x3202
     bitmask: 0x100
     icon: mdi:battery-alert-variant-outline
+    device_class: problem
 
   - platform: modbus_controller
     modbus_controller_id: epever
@@ -39,6 +43,7 @@ binary_sensor:
     address: 0x3202
     bitmask: 0x80
     icon: mdi:battery-alert-variant-outline
+    device_class: problem
 
   - platform: modbus_controller
     modbus_controller_id: epever
@@ -47,6 +52,7 @@ binary_sensor:
     address: 0x3202
     bitmask: 0x40
     icon: mdi:battery-alert-variant-outline
+    device_class: problem
 
   - platform: modbus_controller
     modbus_controller_id: epever
@@ -55,6 +61,7 @@ binary_sensor:
     address: 0x3202
     bitmask: 0x20
     icon: mdi:battery-alert-variant-outline
+    device_class: problem
 
   - platform: modbus_controller
     modbus_controller_id: epever
@@ -63,7 +70,8 @@ binary_sensor:
     address: 0x3202
     bitmask: 0x10
     icon: mdi:battery-alert-variant-outline
-
+    device_class: problem
+    
 text_sensor:
 
   - platform: modbus_controller
