--- a/epever_mppt_controller/stats-battery.yaml
+++ b/epever_mppt_controller/stats-battery.yaml
@@ -12,7 +12,7 @@ binary_sensor:
     bitmask: 0x8000
     icon: mdi:battery-alert-variant-outline
     device_class: problem
-    
+
   - platform: modbus_controller
     modbus_controller_id: epever
     name: "${prefix} BAT: Battery Inner Resistance Abnormal"
@@ -20,7 +20,8 @@ binary_sensor:
     address: 0x3200
     bitmask: 0x100
     icon: mdi:battery-alert-variant-outline
-
+    device_class: problem
+    
 text_sensor:
 
   # D7-D4:  00H Normal, 01H Over Temp.(Higher than the warning settings), 02H Low Temp (Lower than the warning settings)
