--- a/epever_mppt_controller_full.yaml
+++ b/epever_mppt_controller_full.yaml
@@ -1501,6 +1501,7 @@ binary_sensor:
   address: 12801
   bitmask: 0x2000
   icon: mdi:battery-alert-variant
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1512,6 +1513,7 @@ binary_sensor:
   address: 12801
   bitmask: 0x1000
   icon: mdi:battery-alert-variant
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1523,6 +1525,7 @@ binary_sensor:
   address: 12801
   bitmask: 0x800
   icon: mdi:battery-alert-variant
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1534,6 +1537,7 @@ binary_sensor:
   address: 12801
   bitmask: 0x400
   icon: mdi:battery-alert-variant
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1545,6 +1549,7 @@ binary_sensor:
   address: 12801
   bitmask: 0x200
   icon: mdi:battery-alert-variant
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1556,6 +1561,7 @@ binary_sensor:
   address: 12801
   bitmask: 0x100
   icon: mdi:battery-alert-variant
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1567,6 +1573,7 @@ binary_sensor:
   address: 12801
   bitmask: 0x80
   icon: mdi:battery-alert-variant
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1578,6 +1585,7 @@ binary_sensor:
   address: 12801
   bitmask: 0x40
   icon: mdi:battery-alert-variant
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1589,6 +1597,7 @@ binary_sensor:
   address: 12801
   bitmask: 0x20
   icon: mdi:battery-alert-variant
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1600,6 +1609,7 @@ binary_sensor:
   address: 12802
   bitmask: 0x800
   icon: mdi:battery-alert-variant-outline
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1611,6 +1621,7 @@ binary_sensor:
   address: 12802
   bitmask: 0x400
   icon: mdi:battery-alert-variant-outline
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1622,6 +1633,7 @@ binary_sensor:
   address: 12802
   bitmask: 0x200
   icon: mdi:battery-alert-variant-outline
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1633,6 +1645,7 @@ binary_sensor:
   address: 12802
   bitmask: 0x100
   icon: mdi:battery-alert-variant-outline
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1644,6 +1657,7 @@ binary_sensor:
   address: 12802
   bitmask: 0x80
   icon: mdi:battery-alert-variant-outline
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1655,6 +1669,7 @@ binary_sensor:
   address: 12802
   bitmask: 0x40
   icon: mdi:battery-alert-variant-outline
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1666,6 +1681,7 @@ binary_sensor:
   address: 12802
   bitmask: 0x20
   icon: mdi:battery-alert-variant-outline
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1677,6 +1693,7 @@ binary_sensor:
   address: 12802
   bitmask: 0x10
   icon: mdi:battery-alert-variant-outline
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
@@ -1700,6 +1717,7 @@ binary_sensor:
   address: 12800
   bitmask: 0x100
   icon: mdi:battery-alert-variant-outline
+  device_class: problem
   disabled_by_default: false
   skip_updates: 0
   force_new_range: false
