--- a/epever_mppt_controller/stats-charging.yaml
+++ b/epever_mppt_controller/stats-charging.yaml
@@ -104,7 +104,7 @@ text_sensor:
 
   - platform: modbus_controller
     modbus_controller_id: epever
-    id: charger_status
+    id: mppt_chg_charging_status
     name: "${prefix} CHG: Charging Status"
     register_type: read
     address: 0x3201
@@ -122,6 +122,8 @@ text_sensor:
         default: return std::string("Unknown");
       }
       return x;
+    # - sensor.integration.reset:  mppt_rt_battery_soc_ah
+
 
   - platform: modbus_controller
     modbus_controller_id: epever
