--- a/epever_mppt_controller/stats-charging.yaml
+++ b/epever_mppt_controller/stats-charging.yaml
@@ -116,7 +116,7 @@ text_sensor:
       value = value & 0x3; /* for two bits */
       switch (value) { 
         case 0x0: return std::string("Not charging");
-        case 0x1: return std::string("Float");
+        case 0x1: id(mppt_rt_battery_soc_ah).reset(); return std::string("Float");
         case 0x2: return std::string("Boost");
         case 0x3: return std::string("Equalization");
         default: return std::string("Unknown");
