--- a/epever_mppt_controller_full.yaml
+++ b/epever_mppt_controller_full.yaml
@@ -751,10 +751,6 @@ sensor:
   time_unit: h
   integration_method: trapezoid
   icon: mdi:sine-wave
-  on_value:
-  - then:
-    - lambda: !lambda "if (id(mppt_rt_battery_soc_ah).state > 0.05){ \n  id(mppt_rt_battery_soc_ah).reset();\n\
-        };"
   disabled_by_default: false
   force_update: false
   restore: false
@@ -1197,9 +1193,9 @@ text_sensor:
   lambda: !lambda "uint16_t value = (data[item->offset] << 8) + data[item->offset+1];\n\
     value = value >> 2;   /* starting D2 */\nvalue = value & 0x3; /* for two bits\
     \ */\nswitch (value) { \n  case 0x0: return std::string(\"Not charging\");\n \
-    \ case 0x1: return std::string(\"Float\");\n  case 0x2: return std::string(\"\
-    Boost\");\n  case 0x3: return std::string(\"Equalization\");\n  default: return\
-    \ std::string(\"Unknown\");\n}\nreturn x;"
+    \ case 0x1: id(mppt_rt_battery_soc_ah).reset(); return std::string(\"Float\");\n\
+    \  case 0x2: return std::string(\"Boost\");\n  case 0x3: return std::string(\"\
+    Equalization\");\n  default: return std::string(\"Unknown\");\n}\nreturn x;"
   disabled_by_default: false
   bitmask: 0xFFFFFFFF
   skip_updates: 0
@@ -2773,9 +2769,9 @@ uart:
       open_drain: false
       pullup: false
       pulldown: false
-    drive_strength: 20.0
     ignore_strapping_warning: false
     inverted: false
+    drive_strength: 20.0
   rx_pin:
     number: 18
     mode:
@@ -2784,9 +2780,9 @@ uart:
       open_drain: false
       pullup: false
       pulldown: false
-    drive_strength: 20.0
     ignore_strapping_warning: false
     inverted: false
+    drive_strength: 20.0
   baud_rate: 115200
   stop_bits: 1
   rx_buffer_size: 256
@@ -2802,9 +2798,9 @@ modbus:
       open_drain: false
       pullup: false
       pulldown: false
-    drive_strength: 20.0
     ignore_strapping_warning: false
     inverted: false
+    drive_strength: 20.0
   send_wait_time: 200ms
   disable_crc: false
 modbus_controller:
