--- a/epever_mppt_controller_full.yaml
+++ b/epever_mppt_controller_full.yaml
@@ -1192,8 +1192,9 @@ text_sensor:
   icon: mdi:battery-charging
   lambda: !lambda "uint16_t value = (data[item->offset] << 8) + data[item->offset+1];\n\
     value = value >> 2;   /* starting D2 */\nvalue = value & 0x3; /* for two bits\
-    \ */\nswitch (value) { \n  case 0x0: return std::string(\"Not charging\");\n \
-    \ case 0x1: id(mppt_rt_battery_soc_ah).reset(); return std::string(\"Float\");\n\
+    \ */\n\nif (id(mppt_chg_charging_status).state == \"Boost\" and value == 0x1){\n\
+    \  id(mppt_rt_battery_soc_ah).reset(); \n}\n\nswitch (value) { \n  case 0x0: return\
+    \ std::string(\"Not charging\");\n  case 0x1: return std::string(\"Float\");\n\
     \  case 0x2: return std::string(\"Boost\");\n  case 0x3: return std::string(\"\
     Equalization\");\n  default: return std::string(\"Unknown\");\n}\nreturn x;"
   disabled_by_default: false
@@ -2769,8 +2770,8 @@ uart:
       open_drain: false
       pullup: false
       pulldown: false
-    ignore_strapping_warning: false
     inverted: false
+    ignore_strapping_warning: false
     drive_strength: 20.0
   rx_pin:
     number: 18
@@ -2780,8 +2781,8 @@ uart:
       open_drain: false
       pullup: false
       pulldown: false
-    ignore_strapping_warning: false
     inverted: false
+    ignore_strapping_warning: false
     drive_strength: 20.0
   baud_rate: 115200
   stop_bits: 1
@@ -2798,8 +2799,8 @@ modbus:
       open_drain: false
       pullup: false
       pulldown: false
-    ignore_strapping_warning: false
     inverted: false
+    ignore_strapping_warning: false
     drive_strength: 20.0
   send_wait_time: 200ms
   disable_crc: false
