--- a/epever_mppt_controller_full.yaml
+++ b/epever_mppt_controller_full.yaml
@@ -1484,9 +1484,7 @@ button:
   on_press:
   - then:
     - lambda: !lambda |-
-        // id(mppt_rt_battery_soc_ah).reset();
-        // set mppt_rt_battery_soc_ah state to 100
-        id(mppt_rt_battery_soc_ah).publish_and_save_(100.0f);
+        id(mppt_rt_battery_soc_ah).reset();
   disabled_by_default: false
 - platform: template
   name: 'MPPT BP: Write Battery Parameters'
@@ -2774,8 +2772,8 @@ uart:
       pullup: false
       pulldown: false
     inverted: false
-    ignore_strapping_warning: false
     drive_strength: 20.0
+    ignore_strapping_warning: false
   rx_pin:
     number: 18
     mode:
@@ -2785,8 +2783,8 @@ uart:
       pullup: false
       pulldown: false
     inverted: false
-    ignore_strapping_warning: false
     drive_strength: 20.0
+    ignore_strapping_warning: false
   baud_rate: 115200
   stop_bits: 1
   rx_buffer_size: 256
@@ -2803,8 +2801,8 @@ modbus:
       pullup: false
       pulldown: false
     inverted: false
-    ignore_strapping_warning: false
     drive_strength: 20.0
+    ignore_strapping_warning: false
   send_wait_time: 200ms
   disable_crc: false
 modbus_controller:
