--- a/epever_mppt_controller/stats.yaml
+++ b/epever_mppt_controller/stats.yaml
@@ -217,11 +217,11 @@ sensor:
     sensor: mppt_stat_battery_current
     time_unit: h
     integration_method: trapezoid
+    accuracy_decimals: 2
+    state_class: measurement
     icon: mdi:sine-wave
-    # unit_of_measurement: Ah
     filters:
       - lambda: return x + id(mppt_bp_battery_capacity).state;
-      - round: 2
 
 button:
   - platform: template
