--- a/epever_mppt_controller/stats.yaml
+++ b/epever_mppt_controller/stats.yaml
@@ -1,5 +1,4 @@
 sensor:
-
   - platform: modbus_controller
     modbus_controller_id: epever
     id: max_pv_voltage_today
@@ -51,7 +50,7 @@ sensor:
     filters:
       - multiply: 0.01
     icon: mdi:sine-wave
-    
+
   - platform: modbus_controller
     modbus_controller_id: epever
     name: "${prefix} STAT: Consumed Energy Today"
@@ -158,7 +157,7 @@ sensor:
     filters:
       - multiply: 0.01
     icon: mdi:counter
-    
+
   - platform: modbus_controller
     disabled_by_default: ${disabled_by_default}
     modbus_controller_id: epever
@@ -189,12 +188,30 @@ sensor:
       then:
         - sensor.template.publish:
             id: real_soc
-            state: !lambda 'return x*2;'
+            state: !lambda "return x*2;"
             #state: !lambda 'return 101.1475 + pow((1.010924 - 101.1475)/(1 + pow((x/31.86812), 81.69155)),5299956);'
             # 1.010924 /(1 + (x/31.86812)**81.69155)**5299956
+
   - platform: template
     id: real_soc
     name: "${prefix} STAT: Battery SOC"
+    icon: mdi:battery-high
+    accuracy_decimals: 0
+    unit_of_measurement: "%"
+    state_class: measurement
+
+  - platform: template
+    name: "${prefix} STAT: Battery SOC Pct"
+    lambda: |-
+      if (id(real_soc).state and id(mppt_bp_battery_capacity).state) {
+        return id(real_soc).state / id(mppt_bp_battery_capacity).state * 100.0;
+      } else {
+        return 0.0;
+      }
+    state_class: measurement
+    accuracy_decimals: 0
+    unit_of_measurement: "%"
+    icon: mdi:battery-high
 
   - platform: modbus_controller
     modbus_controller_id: epever
@@ -219,7 +236,7 @@ sensor:
     integration_method: trapezoid
     accuracy_decimals: 2
     state_class: measurement
-    icon: mdi:sine-wave
+    icon: mdi:battery-high
     filters:
       - lambda: return x + id(mppt_bp_battery_capacity).state;
 
