--- a/epever_mppt_controller/realtime.yaml
+++ b/epever_mppt_controller/realtime.yaml
@@ -158,7 +158,7 @@ sensor:
   - platform: modbus_controller
     modbus_controller_id: epever
     id: battery_soc
-    name: "${prefix} RT: Battery est. SOC"
+    name: "${prefix} RT: Battery SOC Pct ModBus"
     address: 0x311A
     unit_of_measurement: "%"
     register_type: read
