--- a/epever_mppt_controller_full.yaml
+++ b/epever_mppt_controller_full.yaml
@@ -393,7 +393,7 @@ sensor:
 - platform: modbus_controller
   modbus_controller_id: epever
   id: battery_soc
-  name: 'MPPT RT: Battery est. SOC'
+  name: 'MPPT RT: Battery SOC Pct ModBus'
   address: 12570
   unit_of_measurement: '%'
   register_type: read
@@ -731,8 +731,8 @@ sensor:
 - platform: template
   name: 'MPPT STAT: Battery SOC Pct'
   lambda: !lambda |-
-    if (id(real_soc).state and id(mppt_bp_battery_capacity).state) {
-      return id(real_soc).state / id(mppt_bp_battery_capacity).state * 100.0;
+    if (id(mppt_rt_battery_soc_ah).state and id(mppt_bp_battery_capacity).state) {
+      return id(mppt_rt_battery_soc_ah).state / id(mppt_bp_battery_capacity).state * 100.0;
     } else {
       return 0.0;
     }
