--- a/epever_mppt_controller/realtime.yaml
+++ b/epever_mppt_controller/realtime.yaml
@@ -166,6 +166,33 @@ sensor:
     accuracy_decimals: 0
     icon: mdi:battery-high
 
+  # Calculated SOC integration Ah
+  - platform: integration
+    name: "MPPT RT: Battery SOC Ah"
+    id: mppt_rt_battery_soc_ah
+    sensor: mppt_stat_battery_current
+    time_unit: h
+    integration_method: trapezoid
+    accuracy_decimals: 2
+    state_class: measurement
+    icon: mdi:battery-high
+    filters:
+      - lambda: return x + id(mppt_bp_battery_capacity).state;
+
+  # Calculated SOC integration Pct
+  - platform: template
+    name: "${prefix} STAT: Battery SOC Pct"
+    lambda: |-
+      if (id(mppt_rt_battery_soc_ah).state and id(mppt_bp_battery_capacity).state) {
+        return id(mppt_rt_battery_soc_ah).state / id(mppt_bp_battery_capacity).state * 100.0;
+      } else {
+        return 0.0;
+      }
+    state_class: measurement
+    accuracy_decimals: 0
+    unit_of_measurement: "%"
+    icon: mdi:battery-high
+
   - platform: modbus_controller
     modbus_controller_id: epever
     id: remote_battery_temperature
